# BaseXX

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BaseXX.h
test/: BaseXX_test.cpp  CMakeLists.txt
